first version with working tests. some issues however.