@@ -3,7 +3,7 @@ package de.bushnaq.abdalla.projecthub;
 import de.bushnaq.abdalla.projecthub.dto.OffDay;
 import de.bushnaq.abdalla.projecthub.dto.OffDayType;
 import de.bushnaq.abdalla.projecthub.dto.User;
-import de.bushnaq.abdalla.projecthub.util.AbstractTestUtil;
+import de.bushnaq.abdalla.projecthub.util.AbstractEntityGenerator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -13,14 +13,12 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @AutoConfigureMockMvc
 @Transactional
-public class OffDayTest extends AbstractTestUtil {
+public class OffDayTest extends AbstractEntityGenerator {
     public static final String FIRST_DATE_0 = "2024-03-14";
     public static final String FIRST_DATE_1 = "2025-07-01";
     public static final String LAST_DATE_0  = "2024-03-14";
@@ -32,24 +30,25 @@ public class OffDayTest extends AbstractTestUtil {
 
         //create a user
         {
-            User user = addUser(LocalDate.parse(FIRST_DATE_0));
+            User user = addRandomUser(LocalDate.parse(FIRST_DATE_0));
 //            User pUser = userApi.persist(user);
             id = user.getId();
         }
 
         //add a vacation
-        {
-            User user = userApi.getUser(id);
-            //vacation
-            offDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
-            userApi.persist(user);//persist the new offDay
-        }
-
+//        {
+//            User user = userApi.getUser(id);
+//            //vacation
+//            addOffDay(user, LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION);
+////            expectedOffDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
+////            userApi.persist(user);//persist the new offDay
+//        }
+        testUsers();
         //test the new offDay
-        {
-            User user = userApi.getUser(id);
-            assertEquals(offDays, user.getOffDays());
-        }
+//        {
+//            User user = userApi.getUser(id);
+//            assertEquals(expectedOffDays, user.getOffDays());
+//        }
 
         printTables();
     }
@@ -60,35 +59,39 @@ public class OffDayTest extends AbstractTestUtil {
 
         //create a user
         {
-            User user = addUser(LocalDate.parse(FIRST_DATE_0));
+            User user = addRandomUser(LocalDate.parse(FIRST_DATE_0));
 //            User pUser = userApi.persist(user);
             id = user.getId();
         }
 
         //add a vacation
         {
-            User user = userApi.getUser(id);
+            User user = expectedUsers.getFirst();
             //vacation
-            offDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
-            userApi.persist(user);//persist the new offDay
+            addOffDay(user, LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION);
+//            expectedOffDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
+//            userApi.persist(user);//persist the new offDay
         }
+        testUsers();
 
         //test the new offDay
-        {
-            User user = userApi.getUser(id);
-            assertEquals(offDays, user.getOffDays());
-        }
+//        {
+//            User user = userApi.getUser(id);
+//            assertEquals(expectedOffDays, user.getOffDays());
+//        }
 
         //try to delete the vacation
         {
-            User user = userApi.getUser(id);
-            userApi.delete(user, user.getOffDays().get(0));
-            offDays.removeFirst();
-            user = userApi.getUser(id);
-            assertEquals(offDays, user.getOffDays());
+            User user = expectedUsers.getFirst();
+//            User user = userApi.getUser(id);
+            OffDay offDay = user.getOffDays().get(0);
+            removeOffDay(offDay, user);
+//            user = userApi.getUser(id);
+            testUsers();
         }
         printTables();
     }
+
 
     @Test
     public void update() throws Exception {
@@ -96,45 +99,45 @@ public class OffDayTest extends AbstractTestUtil {
 
         //create a user
         {
-            User user = addUser(LocalDate.parse(FIRST_DATE_0));
+            User user = addRandomUser(LocalDate.parse(FIRST_DATE_0));
 //            User pUser = userApi.persist(user);
             id = user.getId();
         }
 
         //add a vacation
         {
-            User user = userApi.getUser(id);
+            User user = expectedUsers.getFirst();
             //vacation
-            offDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
-            userApi.persist(user);//persist the new offDay
+            addOffDay(user, LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION);
+//            expectedOffDays.add(user.addOffday(LocalDate.parse(FIRST_DATE_0), LocalDate.parse(LAST_DATE_0), OffDayType.VACATION));
+//            userApi.persist(user);//persist the new offDay
         }
-
+        testUsers();
         //test the new offDay
-        {
-            User user = userApi.getUser(id);
-            assertEquals(offDays, user.getOffDays());
-        }
+//        {
+//            User user = userApi.getUser(id);
+//            assertEquals(expectedOffDays, user.getOffDays());
+//        }
 
         Thread.sleep(1000);//ensure that update time is different
 
         //fix vacation mistake
         {
-            User   user   = userApi.getUser(id);
-            OffDay offDay = userApi.getOffDay(user.getOffDays().getFirst().getId());
+            User   user   = expectedUsers.getFirst();
+            OffDay offDay = user.getOffDays().getFirst();
             offDay.setType(OffDayType.SICK);
             offDay.setFirstDay(LocalDate.parse(FIRST_DATE_1));
             offDay.setLastDay(LocalDate.parse(LAST_DATE_1));
-            userApi.update(offDay);
-            offDays.clear();
-            offDays.add(offDay);
+            updateOffDay(offDay, user);
         }
-
+        testUsers();
         //test if the location was updated correctly
-        {
-            User user = userApi.getUser(id);
-            assertEquals(offDays, user.getOffDays());
-        }
+//        {
+//            User user = userApi.getUser(id);
+//            assertEquals(expectedOffDays, user.getOffDays());
+//        }
 
         printTables();
     }
+
 }
